remove unused apis
