# docs/middleware.openapi.yaml
@@ -876,215 +876,6 @@ paths:
                         created: '2023-12-07 00:45:59.334826'
       security:
         - apikey-header-x-api-key: []
-  /upload_checkpoint:
-    post:
-      summary: UploadCheckpoint
-      x-apifox-folder: Checkpoint
-      x-apifox-status: released
-      deprecated: false
-      description: Upload a Checkpoint
-      operationId: UploadCheckpoint
-      tags:
-        - Checkpoint
-      parameters: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                checkpointType:
-                  type: string
-                  description: Checkpoint type
-                modelUrl:
-                  type: array
-                  items:
-                    type: string
-                  description: Model URL Array
-                params:
-                  type: object
-                  properties:
-                    creator:
-                      type: string
-                      description: User Name
-                  required:
-                    - creator
-                  x-apifox-orders:
-                    - creator
-                  x-apifox-ignore-properties: []
-              required:
-                - checkpointType
-                - modelUrl
-                - params
-              x-apifox-orders:
-                - checkpointType
-                - modelUrl
-                - params
-              x-apifox-ignore-properties: []
-            example:
-              checkpointType: Lora
-              modelUrl:
-                - 'https://civitai.com/api/download/models/15505'
-              params:
-                creator: admin
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  statusCode:
-                    type: integer
-                    description: Status Code
-                  headers:
-                    type: object
-                    properties:
-                      Access-Control-Allow-Headers:
-                        type: string
-                      Access-Control-Allow-Origin:
-                        type: string
-                      Access-Control-Allow-Methods:
-                        type: string
-                    required:
-                      - Access-Control-Allow-Headers
-                      - Access-Control-Allow-Origin
-                      - Access-Control-Allow-Methods
-                    x-apifox-orders:
-                      - Access-Control-Allow-Headers
-                      - Access-Control-Allow-Origin
-                      - Access-Control-Allow-Methods
-                    x-apifox-ignore-properties: []
-                  checkpoint:
-                    type: object
-                    properties:
-                      id:
-                        type: string
-                        description: ID
-                      type:
-                        type: string
-                        description: Type
-                      s3_location:
-                        type: string
-                        description: S3 Key
-                      status:
-                        type: string
-                        description: Status
-                      params:
-                        type: object
-                        properties:
-                          creator:
-                            type: string
-                          multipart_upload:
-                            type: object
-                            properties:
-                              v1-5-pruned-emaonly.safetensors:
-                                type: object
-                                properties:
-                                  bucket:
-                                    type: string
-                                  upload_id:
-                                    type: string
-                                  key:
-                                    type: string
-                                required:
-                                  - bucket
-                                  - upload_id
-                                  - key
-                                x-apifox-orders:
-                                  - bucket
-                                  - upload_id
-                                  - key
-                                x-apifox-ignore-properties: []
-                              cartoony.6hS8.safetensors:
-                                type: object
-                                properties:
-                                  uploadId:
-                                    type: string
-                                  key:
-                                    type: string
-                                  bucket:
-                                    type: string
-                                required:
-                                  - uploadId
-                                  - key
-                                  - bucket
-                                x-apifox-orders:
-                                  - uploadId
-                                  - key
-                                  - bucket
-                                x-apifox-ignore-properties: []
-                            required:
-                              - cartoony.6hS8.safetensors
-                              - v1-5-pruned-emaonly.safetensors
-                            x-apifox-orders:
-                              - v1-5-pruned-emaonly.safetensors
-                              - cartoony.6hS8.safetensors
-                            x-apifox-ignore-properties: []
-                          message:
-                            type: string
-                          created:
-                            type: string
-                        required:
-                          - creator
-                          - created
-                          - multipart_upload
-                          - message
-                        x-apifox-orders:
-                          - creator
-                          - multipart_upload
-                          - message
-                          - created
-                        description: Params
-                        x-apifox-ignore-properties: []
-                    required:
-                      - id
-                      - type
-                      - s3_location
-                      - status
-                      - params
-                    x-apifox-orders:
-                      - id
-                      - type
-                      - s3_location
-                      - status
-                      - params
-                    description: Checkpoint
-                    x-apifox-ignore-properties: []
-                required:
-                  - statusCode
-                  - headers
-                  - checkpoint
-                x-apifox-orders:
-                  - statusCode
-                  - headers
-                  - checkpoint
-                x-apifox-ignore-properties: []
-              examples:
-                '1':
-                  summary: Success
-                  value:
-                    statusCode: 200
-                    headers:
-                      Access-Control-Allow-Headers: Content-Type
-                      Access-Control-Allow-Origin: '*'
-                      Access-Control-Allow-Methods: 'OPTIONS,POST,GET'
-                    checkpoint:
-                      id: a5de3afb-d28d-40e7-aedf-1bf28df68d23
-                      type: Lora
-                      s3_location: 's3://******/Lora/checkpoint/custom/a5de3afb-d28d-40e7-aedf-1bf28df68d23'
-                      status: Active
-                      params:
-                        creator: admin
-                        created: '2023-12-07 06:03:42.870352'
-                        multipart_upload:
-                          cartoony.6hS8.safetensors:
-                            uploadId: sXsj7C6P3Jp5_eU.lQXQQvNCNPNSUD2ExjUgwlt6O30_06b_vuVQcFWbMoUtwLwW89nyfxyArYZqgd7digkbMui8S2huMd5NxGBS2LL8IjCa_iHLasIvjDKM8rAXe1UgtmOWHx_OG_8c.XbO8UEiEOPO_j9HEMS.NkJH2QdZIam_MM8qVzyaWU3uv.KoTQFl
-                            key: Lora/checkpoint/custom/a5de3afb-d28d-40e7-aedf-1bf28df68d23/cartoony.6hS8.safetensors
-                            bucket: '******'
-      security:
-        - apikey-header-x-api-key: []
   /checkpoints:
     get:
       summary: ListCheckpoints
@@ -1685,74 +1476,6 @@ paths:
                       - admin
       security:
         - apikey-header-x-api-key: []
-  /inference/get-inference-job-image-output:
-    get:
-      summary: GetInferenceJobImageOutput
-      x-apifox-folder: Inference
-      x-apifox-status: released
-      deprecated: false
-      description: Gets image output of a specific inference job
-      operationId: GetInferenceJobImageOutput
-      tags:
-        - Inference
-      parameters:
-        - name: jobID
-          in: query
-          description: ''
-          required: true
-          example: '{{jobId}}'
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
-              examples:
-                '1':
-                  summary: Success
-                  value:
-                    - 'https://******.s3.amazonaws.com/out/9f2cd35a-863a-41a0-bf92-ac663679b359/result/image_0.jpg?AWSAccessKeyId=**********&Signature=jDfkuCvuSWVajCAbN%2BZWaPN1XqE%3D&x-amz-security-token=IQoJb3JpZ2luX2VjEDEaDmFwLW5vcnRoZWFzdC0xIkgwRgIhALIAKZaM0AJcM%2B1fUEt8kyIaJgIuxwcOs4%2BKGB7KaLhIAiEArQQyYdW84bCpfp0DjErarG6e4wILiOe%2F4mzQF3wAO1Mq4QMIm%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARABGgw0NDgzNTM4NDExMjYiDAwnvSFMBi%2FVIUVxjyq1A%2B5FX%2BrSM2dUacsktB9ur0ypn%2BHEOmr6IElVWEjzzNnHCbPj0T3KlAOxi8jetaWGVkyjX7nYnWljrAKqqVpWIT0R%2B8zJdvEKa0RsuiSNw9PxbByJ8rdmw8FBQC8WCrNOe7VHTwXhsXrQrTubhstTg7gqBhpTLnhgAs8WYjJvtwwM%2FFQYKQT8EH0vq%2FlKD2nT2VBesLklVI8xniPAty77J%2Bu5vqihjh0uSBQLuHAg9u4zBc%2BcjO4nkeINWj1kzWWBB99pEDlSd5JRk4swYLSEtBx%2FrtiB%2BevliIjlxoB3lUBMc5LCIeAJL%2BmbiGLHyYa8vQjB1vXdnJK6EtgXgM4AnkF1%2BjqW%2FIg7zYu23NHorLY3Y034cXw1DcXkIz3I01tQlqZXbYnQ3eSCx5%2B%2Fws95bq3I6oXzFf1exjA%2FDTv59WCkCHMa3dNZQxIUOAVaMCREqIcakBtq0ZmdZDnSP5Wwl15ixYU9pWjyUKmcwZg2hXpySSHplR9K9I50%2Fp2OKfHlqsWXrDLNz0klXKAhHpF8dz3Sf30y98%2B5pWwaGlq3JQpZT7p0hj%2BsdmLVgFWoB7XNlYc%2BQPv8MNDAxKsGOp0BHLwRftLsel66mjcQDDkOnmcW4dbM96Sk%2ByOKiwAEzHO0chATHHBIv5gjQRfoATD4Qid6JQempsJkgaWKektFhQq3%2BUbopjNWI8SVTZEEcY9j7NI7Bnu5yTP7ZrqCDfGH%2F65AdpyGkuHxsBn%2FMY61TXqbmfzIadx7KSJPUgsD9U7caQmnIP0QngwcRgiTG9EXEgFPiDUT4E1hP%2Ff4ig%3D%3D&Expires=1701916461'
-      security:
-        - apikey-header-x-api-key: []
-  /inference/get-inference-job-param-output:
-    get:
-      summary: GetInferenceJobParamOutput
-      x-apifox-folder: Inference
-      x-apifox-status: released
-      deprecated: false
-      description: Gets parameter output of a specific inference job
-      operationId: GetInferenceJobParamOutput
-      tags:
-        - Inference
-      parameters:
-        - name: jobID
-          in: query
-          description: ''
-          required: true
-          example: '{{jobId}}'
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
-              examples:
-                '1':
-                  summary: Success
-                  value:
-                    - 'https://******.s3.amazonaws.com/out/9f2cd35a-863a-41a0-bf92-ac663679b359/result/9f2cd35a-863a-41a0-bf92-ac663679b359_param.json?AWSAccessKeyId=**********&Signature=axih8%2F0awyEY3cTzvzTqsR%2BI4UI%3D&x-amz-security-token=IQoJb3JpZ2luX2VjEDEaDmFwLW5vcnRoZWFzdC0xIkgwRgIhALIAKZaM0AJcM%2B1fUEt8kyIaJgIuxwcOs4%2BKGB7KaLhIAiEArQQyYdW84bCpfp0DjErarG6e4wILiOe%2F4mzQF3wAO1Mq4QMIm%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARABGgw0NDgzNTM4NDExMjYiDAwnvSFMBi%2FVIUVxjyq1A%2B5FX%2BrSM2dUacsktB9ur0ypn%2BHEOmr6IElVWEjzzNnHCbPj0T3KlAOxi8jetaWGVkyjX7nYnWljrAKqqVpWIT0R%2B8zJdvEKa0RsuiSNw9PxbByJ8rdmw8FBQC8WCrNOe7VHTwXhsXrQrTubhstTg7gqBhpTLnhgAs8WYjJvtwwM%2FFQYKQT8EH0vq%2FlKD2nT2VBesLklVI8xniPAty77J%2Bu5vqihjh0uSBQLuHAg9u4zBc%2BcjO4nkeINWj1kzWWBB99pEDlSd5JRk4swYLSEtBx%2FrtiB%2BevliIjlxoB3lUBMc5LCIeAJL%2BmbiGLHyYa8vQjB1vXdnJK6EtgXgM4AnkF1%2BjqW%2FIg7zYu23NHorLY3Y034cXw1DcXkIz3I01tQlqZXbYnQ3eSCx5%2B%2Fws95bq3I6oXzFf1exjA%2FDTv59WCkCHMa3dNZQxIUOAVaMCREqIcakBtq0ZmdZDnSP5Wwl15ixYU9pWjyUKmcwZg2hXpySSHplR9K9I50%2Fp2OKfHlqsWXrDLNz0klXKAhHpF8dz3Sf30y98%2B5pWwaGlq3JQpZT7p0hj%2BsdmLVgFWoB7XNlYc%2BQPv8MNDAxKsGOp0BHLwRftLsel66mjcQDDkOnmcW4dbM96Sk%2ByOKiwAEzHO0chATHHBIv5gjQRfoATD4Qid6JQempsJkgaWKektFhQq3%2BUbopjNWI8SVTZEEcY9j7NI7Bnu5yTP7ZrqCDfGH%2F65AdpyGkuHxsBn%2FMY61TXqbmfzIadx7KSJPUgsD9U7caQmnIP0QngwcRgiTG9EXEgFPiDUT4E1hP%2Ff4ig%3D%3D&Expires=1701916591'
-      security:
-        - apikey-header-x-api-key: []
   /inference/query-inference-jobs:
     post:
       summary: QueryInferenceJobs
@@ -1852,107 +1575,7 @@ paths:
                           type: Stable-diffusion
       security:
         - apikey-header-x-api-key: []
-  /inference/get-controlnet-model-list:
-    get:
-      summary: /inference/get-controlnet-model-list
-      x-apifox-folder: Inference/Other
-      x-apifox-status: released
-      deprecated: false
-      description: Gets the list of ControlNet models
-      tags:
-        - Inference/Other
-      parameters: []
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
-              examples:
-                '1':
-                  summary: Success
-                  value: []
-      security:
-        - apikey-header-x-api-key: []
-  /inference/get-lora-list:
-    get:
-      summary: /inference/get-lora-list
-      x-apifox-folder: Inference/Other
-      x-apifox-status: released
-      deprecated: false
-      description: Gets the list of LoRa
-      tags:
-        - Inference/Other
-      parameters: []
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
-              examples:
-                '1':
-                  summary: Success
-                  value: []
-      security:
-        - apikey-header-x-api-key: []
-  /inference/get-hypernetwork-list:
-    get:
-      summary: /inference/get-hypernetwork-list
-      x-apifox-folder: Inference/Other
-      x-apifox-status: released
-      deprecated: false
-      description: Gets the list of hypernetworks
-      tags:
-        - Inference/Other
-      parameters: []
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
-              examples:
-                '1':
-                  summary: Success
-                  value: []
-      security:
-        - apikey-header-x-api-key: []
-  /inference/get-texual-inversion-list:
-    get:
-      summary: /inference/get-texual-inversion-list
-      x-apifox-folder: Inference/Other
-      x-apifox-status: released
-      deprecated: false
-      description: Gets the list of textual inversions
-      tags:
-        - Inference/Other
-      parameters: []
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
-              examples:
-                '1':
-                  summary: Success
-                  value: []
-      security:
-        - apikey-header-x-api-key: []
-  /inference/list-inference-jobs:
+  /inferences:
     get:
       summary: ListInferenceJobs
       x-apifox-folder: Inference
